# rumpy-rest-event

./: .env.example  .env.prod  .gitignore  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml  pipeline-discussion.json  pipeline-public.json  prod.Dockerfile
.jetclient/: jetclient.md
.jetclient/rumpy-event/: _folder.md
.jetclient/rumpy-event/Auth/: _folder.md  auth-otp.md  resend-otp.md  verify-otp.md
.jetclient/rumpy-event/Event/: _folder.md  create-event.md  get-hosted-events.md  get-invited-events.md
.jetclient/rumpy-event/Sse/: _folder.md  register-sse.md
dockerfile/: prod.Dockerfile
locales/: auth.json  locales.json  thread.json  user.json
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240219_065139_initial.rs  m20240219_070643_update_user_credential.rs  m20240219_072548_seeding_user_credential.rs  main.rs
migrations/: 20240705123308_first_initial.sql
migrations/2025-02-23-155851_initaldb/: up.sql
src/: main.rs  router.rs  schema.rs
src/common/: api_response.rs  app_state.rs  constant.rs  env_config.rs  jwt.rs  lang.rs  middleware.rs  mod.rs  multipart_file.rs  permission.rs  seeder.rs  utils.rs
src/common/bson/: mod.rs
src/common/google/: mod.rs
src/common/i18n/: mod.rs
src/common/minio/: mod.rs
src/common/mongo/: delete.rs  filter.rs  insert.rs  lookup.rs  mod.rs  update.rs  upsert.rs
src/common/orm/: delete.rs  get.rs  insert.rs  mod.rs  orm.rs  replace.rs  update.rs
src/common/redis/: mod.rs
src/common/redis_util/: mod.rs
src/common/serialize/: mod.rs
src/common/smtp/: mod.rs
src/common/sse/: mod.rs  sse_builder.rs  sse_emitter.rs
src/common/wa/: mod.rs
src/dto/: account_dto.rs  account_permission_dto.rs  branch_dto.rs  coach.rs  coach_dto.rs  detail_transaction.rs  discount.rs  discount_dto.rs  event_config_dto.rs  event_dto.rs  event_guest_dto.rs  event_invitation_dto.rs  file_attachment_dto.rs  following_dto.rs  member_cart.rs  member_dto.rs  member_log_dto.rs  member_subscription_dto.rs  membership_dto.rs  membership_quota_dto.rs  mod.rs  mutual_dto.rs  notification_dto.rs  notification_log_dto.rs  permission_dto.rs  product_dto.rs  product_log_dto.rs  profile_picture_dto.rs  promotion_dto.rs  theme_dto.rs  thread_attachment_dto.rs  thread_dto.rs  thread_vote_dto.rs  topic_dto.rs  transaction_dto.rs  user_dto.rs  user_metadata_dto.rs  user_profile_dto.rs  venue_location_dto.rs
src/entity/: account.rs  account_permission.rs  branch.rs  coach.rs  configuration.rs  conversation.rs  detail_transaction.rs  discount.rs  event.rs  event_guest.rs  event_image.rs  event_invitation.rs  event_questionnaire.rs  event_questionnaire_response.rs  file.rs  file_attachment.rs  following.rs  friend.rs  member.rs  member_cart.rs  member_log.rs  member_subscription.rs  membership.rs  membership_quota.rs  message.rs  mod.rs  mutual.rs  notification.rs  notification_log.rs  permission.rs  post.rs  prelude.rs  product.rs  product_log.rs  profile_picture.rs  promotion.rs  sea_orm_active_enums.rs  space.rs  theme.rs  thread.rs  (+9 more)
src/feature/: mod.rs  stream.rs
src/feature/auth/: auth.rs  auth_model.rs  forgot_password.rs  mod.rs  sign_in.rs  sign_up.rs
src/feature/branch/: branch.rs  branch_model.rs  mod.rs
src/feature/coach/: coach.rs  coach_model.rs  mod.rs
src/feature/conversation/: conversation.rs  conversation_model.rs  mod.rs
src/repositories/: auth_repository.rs  conversation_repository.rs  mod.rs  post_repository.rs  space_repository.rs  user_repository.rs
src/routes/: index.rs
src/seeder/: mod.rs
uploads/: tes.json
(+56 files in other folders)
