[package]
name = "baas"
version = "0.1.0"
edition = "2021"

[workspace]
members = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
futures = { version = "0.3.30" }
redis = "0.27.2"
serde = { version = "1.0.196", features = ["derive","serde_derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
bcrypt = "0.15.1"
rand = "0.8.5"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.34", features = ["unstable-locales", "serde"] }
headers = "0.4.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
serde_json = { version = "1.0.120" }
log = "0.4.20"
lettre = "0.11.7"
validator = { version = "0.19.0", features = ["derive"] }
mime = "0.3.17"
rust-s3 = "0.35.1"
bson = { version = "2.13.0" }
serde-helpers = { version = "0.1.0", features = ["serde_json", "default"] }
serde_with = "3.12.0"
tower = "0.5.2"
xlsxwriter = "0.6.1"
slugify = "0.1.0"
diesel = { version = "2.2.7", features = ["postgres", "chrono","r2d2","serde_json"] }
