[package]
name = "rumpy-rest-event"
version = "0.1.0"
edition = "2024"

[workspace]
members = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.3", features = ["multipart"] }
futures = { version = "0.3.30" }
redis = "0.30.0"
serde = { version = "1.0.219", features = ["derive","serde_derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tracing-subscriber = "0.3.19"
dotenv = "0.15.0"
bcrypt = "0.17.0"
rand = "0.9.1"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.40", features = ["unstable-locales", "serde"] }
headers = "0.4.0"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
serde_json = { version = "1.0.140" }
log = "0.4.27"
lettre = "0.11.15"
validator = { version = "0.20.0", features = ["derive"] }
mime = "0.3.17"
rust-s3 = "0.35.1"
bson = { version = "2.14.0", features = ["chrono-0_4"] }
serde-helpers = { version = "0.1.0", features = ["serde_json", "default"] }
serde_with = "3.12.0"
tower = "0.5.2"
xlsxwriter = "0.6.1"
slugify = "0.1.0"
google-oauth = "1.11.3"
reqwest = {version="0.12.15",features=["json"]}

[dependencies.mongodb]
version = "3.2.3"
features = ["sync"]
